Sugati/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>A_ABTA_Number__c</fullName>
        <label>ABTA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Account_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>A_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>A_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>A_Agree_to_receive_brochure__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Agree to receive brochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_Campaign_Code__c</fullName>
        <label>Campaign_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Email__c</fullName>
        <inlineHelpText>Account Email is required</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>A_First_Name__c</fullName>
        <description>First name (Eg: Tim, Donna)</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Household_No__c</fullName>
        <externalId>true</externalId>
        <label>Household No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_How_Heard_Details__c</fullName>
        <label>How Heard Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_How_Heard__c</fullName>
        <label>How Heard</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fam Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidentifed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Last_Booking_Date__c</fullName>
        <label>Last Booking Date</label>
        <summarizedField>Opportunity.O_Booking_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Last_Enquiry_Date__c</fullName>
        <label>Last Enquiry Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Booked, Booking Optional, Booking cancelled, Training enquiry</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Postal_Code__c</fullName>
        <formula>BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Referrer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Baron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baroness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maj Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Hon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The RT Hon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viscount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viscountess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Status__c</fullName>
        <formula>IF(AND(A_Total_Bookings__c = 0,A_Total_Quotes__c = 0), &quot;Lead&quot;, 
IF(AND(A_Total_Bookings__c = 0,A_Total_Quotes__c &gt; 0), &quot;Potential Client&quot;,
IF(A_Total_Bookings__c = 1, &quot;Client&quot;, 
IF(A_Total_Bookings__c &gt; 1, &quot;Repeat Client&quot;, null
))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Supplier_Type__c</fullName>
        <label>Supplier Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Total_Bookings__c</fullName>
        <label>Total Bookings</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Booked, Booking cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Total_Compensation_Credit_Memo__c</fullName>
        <label>Total Compensation Credit Memo</label>
        <summarizedField>Credit_Memo__c.CM_Total_Credit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Memo__c.CM_Type__c</field>
            <operation>equals</operation>
            <value>Compensation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Credit_Memo__c.CM_Is_Expired__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Memo__c.CM_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Total_Enquiries__c</fullName>
        <label>Total Enquiries</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Enquiry</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Total_Promotional_Credit_Memo__c</fullName>
        <label>Total Promotional Credit Memo</label>
        <summarizedField>Credit_Memo__c.CM_Total_Credit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Memo__c.CM_Type__c</field>
            <operation>equals</operation>
            <value>Promotion</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Credit_Memo__c.CM_Is_Expired__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Memo__c.CM_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Total_Quotes__c</fullName>
        <label>Total Quotes</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Quote pending, Quoted to client, Quote gone cold, Cold</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Type_of_Travel__c</fullName>
        <label>Type of Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Big Short Breaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife/Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Led Journey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trekking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For data update.</description>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_What_Prompted_This_Enquiry__c</fullName>
        <label>What Prompted This Enquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Angels &amp; Urchins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commssion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commssion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Memo__c</fullName>
        <label>Credit and Discount</label>
        <summarizedField>Credit_Memo__c.CM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Memo__c.CM_Is_Expired__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Memo__c.CM_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Division__c</fullName>
        <formula>CreatedBy.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Division</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>A_Campaign_Code__c</columns>
        <columns>A_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Tin</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>